connect support docker